--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,9 @@ body {
   }
 
   .boneco {
-    position: relative;
+    position: absolute;
+    left:512px;
+    top:515px;
   }
 
   .cabeca {
@@ -83,7 +85,10 @@ body {
    font-size: 60px;
    position:absolute;
    top: 300px; 
-   
+   letter-spacing: 20px;
+   color: #f4f4f4;
+   padding: 10px;
+   background-color: hsla(0, 0%, 0%, 0.662);
   }
 
   .botoes{
@@ -95,8 +100,28 @@ body {
     padding: 20px;
     border: solid black;
     margin-right: 5px;
+    background-color: white;
   }
   .letras:hover{
     background-color:darkgray;
+    cursor: pointer;
   }
-
+  .familia{
+    position: relative;
+    left:-500px;
+    top:300px;
+    width: 300px;
+    height: 400px;
+  }
+  .img-praca{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+  .img-forca{
+    z-index: 1;
+  }
+  body{
+    background-image: url(../img/praça.jpg);
+    background-size: 100% 100%;
+  }
