--- a/assets/css/conquista.css
+++ b/assets/css/conquista.css
@@ -10,13 +10,16 @@ h1{
     border-radius: 70px;
     position:absolute;
     left:35%;
-    top:20%;
+    top:25%;
   }
   button:hover{
     background-color: rgb(211, 116, 0);
     cursor: pointer;
   }
   img{
-    width: 400px;
+    width: 500px;
     height: 400px;;
+  }
+  h2{
+    text-align: center;
   }
