--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,8 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #f4f4f4;
+    background-image: url(../img/praça.jpg);
+    background-size: 100% 100%;
   }
 
   #forca {
@@ -15,8 +17,8 @@ body {
 
   .boneco {
     position: absolute;
-    left:410px;
-    top:515px;
+    left:417px;
+    top:460px;
   }
 
   .cabeca {
@@ -84,7 +86,7 @@ body {
   #palavraSecreta{
    font-size: 60px;
    position:absolute;
-   top: 250px; 
+   top: 35%; 
    letter-spacing: 20px;
    color: #f4f4f4;
    padding: 10px;
@@ -107,32 +109,19 @@ body {
     background-color:darkgray;
     cursor: pointer;
   }
-  .familia{
-    position: relative;
-    left:-500px;
-    top:300px;
-    width: 300px;
-    height: 400px;
-  }
-  .img-praca{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-  }
+  
   .img-forca{
     z-index: 1;
   }
-  body{
-    background-image: url(../img/praça.jpg);
-    background-size: 100% 100%;
-  }
-  .letrasJaUsadas{
+  
+  .windowLetrasUsadas{
     background-color: hsla(0, 0%, 0%, 0.807);
-    width: 200px;
-    height: 300px;
-    position: relative;
-    top:-200px;
-    border-radius: 30px;
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    right: 10px;
+    top: 20px;
+    border-radius: 10px;
   }
   .letrasUsadas{
     color: aliceblue;
